[tool.poetry]
name = "concurrent-programming"
version = "0.1.0"
description = ""
authors = ["livvjh <livejh7129@gmail.com>"]
readme = "README.md"
packages = [{include = "concurrent_programming"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
